--- a/OrderPlus/OrderPlus.Fronend/OrderPlus.Fronend.csproj
+++ b/OrderPlus/OrderPlus.Fronend/OrderPlus.Fronend.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.2" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
