Add GenericRepository implementation

--- a/OrderPlus/OrderPlus.Backend/appsettings.json
+++ b/OrderPlus/OrderPlus.Backend/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DockerConnection": "Data Source=.;Initial Catalog=Orders;User ID={Your user};Password={Your password};Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=OrdersPlus;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "AllowedHosts": "*"
 }
