--- a/OrderPlus/OrderPlus.Backend/appsettings.json
+++ b/OrderPlus/OrderPlus.Backend/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DockerConnection": "Data Source=.;Initial Catalog=Orders;User ID={Your user};Password={Your password};Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+   // "DockerConnection": "Data Source=.;Initial Catalog=Orders;User ID={Your user};Password={Your password};Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=OrdersPlus;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
