Add Repository class with HTTP operations and JSON serialization

--- a/OrderPlus/OrderPlus.Fronend/OrderPlus.Fronend.csproj
+++ b/OrderPlus/OrderPlus.Fronend/OrderPlus.Fronend.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MudBlazor" Version="7.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderPlus.Shared\OrderPlus.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
