--- a/OrderPlus/OrderPlus.Fronend/OrderPlus.Fronend.csproj
+++ b/OrderPlus/OrderPlus.Fronend/OrderPlus.Fronend.csproj
@@ -3,16 +3,18 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>enable</ImplicitUsings>    
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DialogService" Version="0.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.2" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup>    
     <ProjectReference Include="..\OrderPlus.Shared\OrderPlus.Shared.csproj" />
   </ItemGroup>
 
